	* Added fann_create_train_from_callback for creating training data from a callback function
	* Amended fann_create_train_from_callback for dynamic link library compatibility
	* Added fann_get_activation_function and fann_get_activation_steepness matching the set functions
	* Added a set of functions to allow restricted access to neural network layout, connections, and weights.

libfann (2.0.0) stable; urgency=low
	* Added Delphi bindings
	* Cascade training
	* Momentum parameter
	* Steepness and activation function available for single neurons
	* New documentation
	* Removed some depricated functions
	* New set of fann_create functions
	* Altered the way the callback function works
	* Training can be stopped by counting the number of datasets that fail instead of just MSE
	* Fixed a memory leak when copying training data
	* More activation functions
	* Enums used instead of integers for several parameters.
	* Possebility to set default logging facility
	* All parameters are saved to configuration file and not just the parameters needed to execute the ANN
	* More readable configuration file
	* Visual Studio .Net Project Files
	* Borland C++ Builder 6.0 Project files

 -- Steffen Nissen <sn@leenissen.dk> Fri, 06 Jan 2006 23:13:30 +0100
	
libfann (1.2.0) stable; urgency=low
	* Fixes for better compability with different compilers
	* Shortcut connections that skip layers
	* Changed version of save fileformat
	* fann_print_connections function
	* More activation functions
	* Batch training
	* RPROP training (default)
	* Quickprop training
	* fann_get_training_algorithm and fann_set_training_algorithm functions
	* fann_test_data function
	* fann_print_parameters function
	* Renamed some functions and variables to avoid confusion of terms (kept deprecated functions)
	
 -- Steffen Nissen <lukesky@diku.dk> Sat, 09 Oct 2004 11:13:22 +0200

libfann (1.1.0) stable; urgency=low
	* Error checking when allocating memory
	* Debian package
	* RPM package
	* Added pkg-config