@@ -177,7 +177,7 @@ int fann_save_internal_fd(struct fann *ann, FILE * conf, const char *configurati
 	fprintf(conf, "num_layers=%u\n", ann->last_layer - ann->first_layer);
 	fprintf(conf, "learning_rate=%f\n", ann->learning_rate);
 	fprintf(conf, "connection_rate=%f\n", ann->connection_rate);
-	fprintf(conf, "shortcut_connections=%u\n", ann->shortcut_connections);
+	fprintf(conf, "network_type=%u\n", ann->network_type);
 	
 	fprintf(conf, "learning_momentum=%f\n", ann->learning_momentum);
 	fprintf(conf, "training_algorithm=%u\n", ann->training_algorithm);
@@ -382,7 +382,7 @@ struct fann *fann_create_from_fd(FILE * conf, const char *configuration_file)
 
     fann_scanf("%f", "learning_rate", &ann->learning_rate);
     fann_scanf("%f", "connection_rate", &ann->connection_rate);
-    fann_scanf("%u", "shortcut_connections", &ann->shortcut_connections);
+    fann_scanf("%u", "network_type", (unsigned int *)&ann->network_type);
 	fann_scanf("%f", "learning_momentum", &ann->learning_momentum);
 	fann_scanf("%u", "training_algorithm", (unsigned int *)&ann->training_algorithm);
 	fann_scanf("%u", "train_error_function", (unsigned int *)&ann->train_error_function);
@@ -471,7 +471,7 @@ struct fann *fann_create_from_fd(FILE * conf, const char *configuration_file)
 		layer_it->last_neuron = layer_it->first_neuron + layer_size;
 		ann->total_neurons += layer_size;
 #ifdef DEBUG
-		if(ann->shortcut_connections && layer_it != ann->first_layer)
+		if(ann->network_type == FANN_NETTYPE_SHORTCUT && layer_it != ann->first_layer)
 		{
 			printf("  layer       : %d neurons, 0 bias\n", layer_size);
 		}
@@ -484,7 +484,7 @@ struct fann *fann_create_from_fd(FILE * conf, const char *configuration_file)
 
 	ann->num_input = ann->first_layer->last_neuron - ann->first_layer->first_neuron - 1;
 	ann->num_output = ((ann->last_layer - 1)->last_neuron - (ann->last_layer - 1)->first_neuron);
-	if(!ann->shortcut_connections)
+	if(ann->network_type == FANN_NETTYPE_LAYER)
 	{
 		/* one too many (bias) in the output layer */
 		ann->num_output--;
@@ -550,7 +550,7 @@ struct fann *fann_create_from_fd(FILE * conf, const char *configuration_file)
  */
 struct fann *fann_create_from_fd_1_1(FILE * conf, const char *configuration_file)
 {
-	unsigned int num_layers, layer_size, input_neuron, i, shortcut_connections, num_connections;
+	unsigned int num_layers, layer_size, input_neuron, i, network_type, num_connections;
 	unsigned int activation_function_hidden, activation_function_output;
 #ifdef FIXEDFANN
 	unsigned int decimal_point, multiplier;
@@ -572,7 +572,7 @@ struct fann *fann_create_from_fd_1_1(FILE * conf, const char *configuration_file
 #endif
 
 	if(fscanf(conf, "%u %f %f %u %u %u " FANNSCANF " " FANNSCANF "\n", &num_layers, &learning_rate,
-		&connection_rate, &shortcut_connections, &activation_function_hidden,
+		&connection_rate, &network_type, &activation_function_hidden,
 		&activation_function_output, &activation_steepness_hidden,
 		&activation_steepness_output) != 8)
 	{
@@ -586,7 +586,7 @@ struct fann *fann_create_from_fd_1_1(FILE * conf, const char *configuration_file
 		return NULL;
 	}
 	ann->connection_rate = connection_rate;
-	ann->shortcut_connections = shortcut_connections;
+	ann->network_type = (enum fann_nettype_enum)network_type;
 	ann->learning_rate = learning_rate;
 
 #ifdef FIXEDFANN
@@ -618,7 +618,7 @@ struct fann *fann_create_from_fd_1_1(FILE * conf, const char *configuration_file
 		layer_it->last_neuron = layer_it->first_neuron + layer_size;
 		ann->total_neurons += layer_size;
 #ifdef DEBUG
-		if(ann->shortcut_connections && layer_it != ann->first_layer)
+		if(ann->network_type == FANN_NETTYPE_SHORTCUT && layer_it != ann->first_layer)
 		{
 			printf("  layer       : %d neurons, 0 bias\n", layer_size);
 		}
@@ -631,7 +631,7 @@ struct fann *fann_create_from_fd_1_1(FILE * conf, const char *configuration_file
 
 	ann->num_input = ann->first_layer->last_neuron - ann->first_layer->first_neuron - 1;
 	ann->num_output = ((ann->last_layer - 1)->last_neuron - (ann->last_layer - 1)->first_neuron);
-	if(!ann->shortcut_connections)
+	if(ann->network_type == FANN_NETTYPE_LAYER)
 	{
 		/* one too many (bias) in the output layer */
 		ann->num_output--;
